--- a/FinalRmd.Rmd
+++ b/FinalRmd.Rmd
@@ -4,12 +4,12 @@ author: "IC"
 date: "12/11/2019"
 output: html_document
 ---
-
+#Final Project
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
 
-## R Markdown
+## R Markdown Here
 
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
